src/objects/SITMobile_Gateway_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Hold the gateway settings of SIT Mobile Gateway</description>
    <fields>
        <fullName>AccountID__c</fullName>
        <description>Account ID assigned by SITMobile</description>
        <inlineHelpText>Account ID assigned by SITMobile</inlineHelpText>
        <label>AccountID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientID__c</fullName>
        <description>Client ID assigned by SITMobile</description>
        <inlineHelpText>Client ID assigned by SITMobile</inlineHelpText>
        <label>ClientID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <description>end point url used to connect to the gateway</description>
        <inlineHelpText>end point url used to connect to the gateway</inlineHelpText>
        <label>End Point</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login__c</fullName>
        <description>Login name assigned by SITMobile</description>
        <inlineHelpText>Login name assigned by SITMobile</inlineHelpText>
        <label>Login</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password assigned by SITMobile</description>
        <inlineHelpText>Password assigned by SITMobile</inlineHelpText>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source MSISDN i.e. the originator of the message</description>
        <inlineHelpText>Source MSISDN i.e. the originator of the message</inlineHelpText>
        <label>Source MSISDN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SIT Mobile Gateway Settings</label>
</CustomObject>